# buddy-event-voice-agent

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  livekit.yaml.example  pyproject.toml
.github/workflows/: deploy-agent.yml
buddy/: main.py  prompts.py  rag.py  tools.py
frontenddiy/: package.json  pnpm-lock.yaml
frontenddiy/app/: layout.tsx  page.tsx
frontenddiy/app/components/: client-provider.tsx
frontenddiy/components/app/transcript/: TranscriptPanel.tsx
frontenddiy/hooks/: useChatMessages.ts  useRoom.ts
frontenddiy/lib/: utils.ts
infrastructure/: ecr_only.tf  main.tf  variables.tf
scripts/: setup_vector_store.py  test_rag.py
