[tool.poetry]
name = "buddy"
version = "0.1.0"
description = ""
authors = ["Alan Bohannon <alanbohannon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.2.1"
livekit = "^1.0.18"
livekit-agents = {version = "^1.2", extras = ["silero", "turn-detector"]}
livekit-plugins-noise-cancellation = "^0.2.5"
livekit-plugins-openai = "^1.2"
livekit-plugins-elevenlabs = "^1.2"
livekit-plugins-assemblyai = "^1.2"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"